added client theme partial to app, included extra helper classes

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -46,7 +46,10 @@
 // @include foundation-float-classes;
 @include foundation-flex-classes;
 
-// @include foundation-prototype-classes;
+@include foundation-prototype-classes;
 
 @include motion-ui-transitions;
 @include motion-ui-animations;
+
+// Sail Connections - Styles
+@import 'client';
