--- a/scss/_client.scss
+++ b/scss/_client.scss
@@ -10,6 +10,15 @@
 
 @import 'settings';
 
+// Global Settings
+// ---------------
+
+// Height of hero images
+$hero-image-sm: 250px;
+$hero-image-md: 300px;
+$hero-image-lg: 480px;
+$hero-image-xl: 600px;
+
 
 // Base Typography
 // ---------------
@@ -49,15 +58,32 @@ section *:last-child {
 
 .hero {
   position: relative;
-  min-height: 427px;
-  height: 427px;
+  height: $hero-image-sm;
   color: $primary-color;
-  background-image: url('https://public-web-production-f.squarecdn.com/assets/pages/payments/hero.extra-large-1428ed4c11f4f3d058dc72672115ef50e6460b52b0e153aa59e044b1964a8f91.jpg');
-  background-image: url(../img/hero/hero-large.jpg);
+  background-color: $dark-gray;
   background-position: center bottom;
   background-repeat: no-repeat;
-  background-size: auto 489px;
+  background-size: auto 100%;
   overflow: hidden;
+}
+
+// Hero Sizes
+@media screen and (min-width: 480px) {
+  .hero {
+    height: $hero-image-md;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    height: $hero-image-lg;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    height: $hero-image-xl;
+  }
 }
 
 .hero .content {
