refactored scss import methods to simplify overall structure

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -53,10 +53,7 @@
 @include motion-ui-animations;
 
 // Sail Connections
-
-// Styles
-@import 'client';
-@import 'sc-header';
+@import 'sc-config';
 
 // Vendor
 @import '../scss/vendor/flickity';
