base updates: * added definitions for header links and dropdown menus * new button modifier classes for icons * added hero banner breakpoint style for extra large screens

--- a/scss/sc-src/_buttons.scss
+++ b/scss/sc-src/_buttons.scss
@@ -11,3 +11,21 @@
     }
   }
 }
+
+// Button with Icons
+
+// Button with icon before text label
+.button-icon-left {
+  i {
+    margin-right: 0.25rem;
+    vertical-align: middle
+  }
+}
+
+// Button with icon after text label
+.button-icon-right {
+  i {
+    margin-left: 0.25rem;
+    vertical-align: middle
+  }
+}
