--- a/css/app.css
+++ b/css/app.css
@@ -6493,6 +6493,10 @@ section *:last-child {
   .hero {
     height: 600px; } }
 
+@media screen and (min-width: 1600px) {
+  .hero {
+    background-size: cover; } }
+
 .hero .content {
   position: absolute;
   bottom: 0;
@@ -6515,6 +6519,14 @@ section *:last-child {
     color: #fff; }
     .button.secondary:hover {
       color: #fff; }
+
+.button-icon-left i {
+  margin-right: 0.25rem;
+  vertical-align: middle; }
+
+.button-icon-right i {
+  margin-left: 0.25rem;
+  vertical-align: middle; }
 
 .footer {
   padding: 2.625rem 1rem;
@@ -6540,21 +6552,81 @@ section *:last-child {
     padding-left: 0.5rem;
     padding-right: 0.5rem; } }
 
+.logo {
+  margin-right: 2rem;
+  width: 220px;
+  height: auto; }
+
 .sc-top-bar {
+  padding: 1.25rem 2rem;
   background-color: #005593; }
   .sc-top-bar .sc-menu {
+    align-items: center;
     background-color: transparent; }
 
-.sc-menu li.is-active a {
+.sc-menu a {
   color: #fff;
-  background-color: #00aeeF; }
+  text-transform: uppercase; }
+  .sc-menu a:hover {
+    color: rgba(255, 255, 255, 0.7); }
 
-.sc-menu .submenu {
+.dropdown.sc-menu .submenu {
   background-color: #00aeeF;
-  border: 0; }
+  border: 0;
+  min-width: 220px; }
 
-.menu a {
-  color: #fff; }
+.dropdown.sc-menu .is-active {
+  background-color: #00aeeF; }
+  .dropdown.sc-menu .is-active > a {
+    color: #fff; }
+
+.dropdown.sc-menu > li.is-dropdown-submenu-parent > a {
+  padding-right: 1rem; }
+
+.dropdown.sc-menu li.is-dropdown-submenu-parent > a::after {
+  content: none; }
+
+.is-submenu-item {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2); }
+  .is-submenu-item a {
+    text-transform: none; }
+  .is-submenu-item:last-child {
+    border-bottom: 0; }
+
+@font-face {
+  font-family: 'sc-icons';
+  src: url("../fonts/sc-icons.eot?h5xyon");
+  src: url("../fonts/sc-icons.eot?h5xyon#iefix") format("embedded-opentype"), url("../fonts/sc-icons.ttf?h5xyon") format("truetype"), url("../fonts/sc-icons.woff?h5xyon") format("woff"), url("../fonts/sc-icons.svg?h5xyon#sc-icons") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+[class^="sc-icon"], [class*=" sc-icon"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'sc-icons' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
+
+.sc-icon-chat:before {
+  content: "\e900"; }
+
+.sc-icon-instagram:before {
+  content: "\e904"; }
+
+.sc-icon-linkedin:before {
+  content: "\e901"; }
+
+.sc-icon-twitter:before {
+  content: "\e902"; }
+
+.sc-icon-facebook:before {
+  content: "\e903"; }
 
 .tabs-title a {
   padding-top: 0;
