--- a/scss/sc-src/_banner.scss
+++ b/scss/sc-src/_banner.scss
@@ -31,6 +31,12 @@
   }
 }
 
+@media screen and (min-width: 1600px) {
+  .hero {
+    background-size: cover;
+  }
+}
+
 .hero .content {
   position: absolute;
   bottom: 0;
