--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -69,8 +69,8 @@ $global-font-size: 100%;
 $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
 $foundation-palette: (
-  primary: #01266c, // dark blue
-  secondary: #00a5a1, // teal
+  primary: #005593, // Dark blue
+  secondary: #00a5a1, // Teal
   success: #3adb76,
   warning: #ffae00,
   alert: #cc4b37,
