--- a/scss/sc-src/_base.scss
+++ b/scss/sc-src/_base.scss
@@ -163,16 +163,42 @@ section *:last-child {
 }
 
 .list-column-features {
+
   li {
+    position: relative;
     margin-bottom: 1.25rem;
+    padding-left: 2rem;
+  }
+
+  li::before {
+    content: "\e906";
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-right: 0.5rem;
+    color: $color-secondary-3;
+    font-family: 'sc-icons';
   }
 }
 
 .list-column {
-  -webkit-column-count: 2;
-  -moz-column-count: 2;
-  column-count: 2;
-  -webkit-column-gap: 4em;
-  -moz-column-gap: 4em;
-  column-gap: 4em;
+  -webkit-column-gap: 2rem;
+  -moz-column-gap: 2rem;
+  column-gap: 2rem;
+
+  li {
+    -webkit-column-break-inside: avoid; /* Chrome, Safari, Opera */
+    page-break-inside: avoid; /* Firefox */
+    break-inside: avoid; /* IE 10+ */
+  }
+}
+
+@media screen and (min-width: 640px) {
+
+  .list-column-2 {
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+  }
+
 }
