--- a/scss/sc-src/_tabs.scss
+++ b/scss/sc-src/_tabs.scss
@@ -1,6 +1,27 @@
 // Tabs
 // ----
 
+.page-tabs {
+	padding-top: 2rem;
+
+  .tabs {
+    border: 0;
+  }
+
+  .tabs-content {
+    padding-top: 2.625rem;
+    padding-bottom: 2rem;
+    border: 0;
+  }
+
+  .tabs-panel {
+    padding: 0;
+  }
+}
+
+// Tabs
+// ----
+
 .tabs-title {
   a {
     padding-top: 0;
@@ -31,24 +52,16 @@
   margin-bottom: 1.25rem;
 }
 
-// Page Tabs
-// ---------
+@media screen and (min-width: 768px) {
 
-.content-tabs {
-  position: relative;
-  margin-top: -45px;
+	.page-tabs {
+  	position: relative;
+		margin-top: -45px;
+		padding-top: 0;
+	}
 
-  .tabs {
-    border: 0;
-  }
+	.tabs-panel-title {
+		text-align: center;
+	}
 
-  .tabs-content {
-    padding-top: 2.625rem;
-    padding-bottom: 2rem;
-    border: 0;
-  }
-
-  .tabs-panel {
-    padding: 0;
-  }
 }
