--- a/scss/sc-src/_base.scss
+++ b/scss/sc-src/_base.scss
@@ -119,7 +119,7 @@
   }
 }
 
-@media screen and (min-width: 640px) {
+@media screen and (min-width: $breakpoint-sm) {
   .overview-list {
     dt, dd {
       flex-basis: 25%;
@@ -127,7 +127,7 @@
   }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: $breakpoint-xl) {
   .overview-list {
     dt, dd {
       flex-basis: auto;
@@ -180,7 +180,7 @@
   }
 }
 
-@media screen and (min-width: 640px) {
+@media screen and (min-width: $breakpoint-sm) {
 
   .list-column-2 {
     -webkit-column-count: 2;
