--- a/scss/sc-src/_header.scss
+++ b/scss/sc-src/_header.scss
@@ -123,7 +123,7 @@
 
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: $breakpoint-md) {
 
   .top-bar {
     padding: 1.5rem;
