--- a/css/app.css
+++ b/css/app.css
@@ -6434,11 +6434,11 @@ ol.list-upper-roman {
   .overview-list dd {
     flex-basis: 50%; }
 
-@media screen and (min-width: 640px) {
+@media screen and (min-width: 40em) {
   .overview-list dt, .overview-list dd {
     flex-basis: 25%; } }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 64em) {
   .overview-list dt, .overview-list dd {
     flex-basis: auto; }
   .overview-list dt {
@@ -6477,7 +6477,7 @@ ol.list-upper-roman {
     break-inside: avoid;
     /* IE 10+ */ }
 
-@media screen and (min-width: 640px) {
+@media screen and (min-width: 40em) {
   .list-column-2 {
     -webkit-column-count: 2;
     -moz-column-count: 2;
@@ -6521,33 +6521,46 @@ ol.list-upper-roman {
 .hero {
   position: relative;
   height: 250px;
-  color: #005593;
+  color: #fff;
   background-color: #8a8a8a;
   background-position: center bottom;
   background-repeat: no-repeat;
   background-size: auto 100%;
   overflow: hidden; }
+  .hero::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: #0a0a0a;
+    background: -webkit-linear-gradient(0deg, rgba(10, 10, 10, 0.7) 0%, rgba(10, 10, 10, 0) 60%);
+    background: linear-gradient(0deg, rgba(10, 10, 10, 0.7) 0%, rgba(10, 10, 10, 0) 60%); }
 
-@media screen and (min-width: 480px) {
+.hero.hero-secondary {
+  height: 250px; }
+
+@media screen and (min-width: 30em) {
   .hero {
     height: 300px; } }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48em) {
   .hero {
     height: 480px; } }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 75em) {
   .hero {
     height: 600px; } }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 87.5em) {
   .hero {
     background-size: cover; } }
 
 .hero .content {
   position: absolute;
   bottom: 0;
-  padding-bottom: 80px; }
+  padding-bottom: 60px; }
 
 .hero-title-wrap {
   position: relative;
@@ -6558,7 +6571,17 @@ ol.list-upper-roman {
 .hero-title {
   position: relative;
   margin: 0;
+  font-size: 1.75rem;
+  line-height: 1.25;
   z-index: 2; }
+
+@media screen and (min-width: 48em) {
+  .hero-title {
+    font-size: 2.5rem; } }
+
+@media screen and (min-width: 60em) {
+  .hero-title {
+    font-size: 3rem; } }
 
 .button {
   margin: 0;
@@ -6677,7 +6700,7 @@ ol.list-upper-roman {
     .top-bar .top-bar-right .button-icon-left i {
       margin-right: 0; } }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48em) {
   .top-bar {
     padding: 1.5rem; }
   .menu-text {
@@ -6804,7 +6827,7 @@ ol.list-upper-roman {
 .tabs-panel-title {
   margin-bottom: 1.25rem; }
 
-@media screen and (min-width: 640px) {
+@media screen and (min-width: 40em) {
   .page-tabs {
     position: relative;
     margin-top: -45px;
@@ -6812,7 +6835,7 @@ ol.list-upper-roman {
   .tabs-panel-title {
     text-align: center; } }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48em) {
   .tabs-title a {
     padding: 0 1.5rem 0; }
   .tabs-title + .tabs-title {
