latest complied css

--- a/css/app.css
+++ b/css/app.css
@@ -2484,11 +2484,11 @@ h6, .h6 {
 
 a {
   line-height: inherit;
-  color: #005593;
+  color: #00a5a1;
   text-decoration: none;
   cursor: pointer; }
   a:hover, a:focus {
-    color: #00497e; }
+    color: #008e8a; }
   a img {
     border: 0; }
 
@@ -3753,7 +3753,7 @@ select {
   content: '';
   border-right-width: 0;
   border-left-style: solid;
-  border-color: transparent transparent transparent #005593; }
+  border-color: transparent transparent transparent #00a5a1; }
 
 .drilldown.align-right .is-drilldown-submenu-parent > a::after {
   right: auto;
@@ -3765,7 +3765,7 @@ select {
   content: '';
   border-left-width: 0;
   border-right-style: solid;
-  border-color: transparent #005593 transparent transparent; }
+  border-color: transparent #00a5a1 transparent transparent; }
 
 .drilldown .js-drilldown-back > a::before {
   display: block;
@@ -3830,7 +3830,7 @@ select {
   content: '';
   border-bottom-width: 0;
   border-top-style: solid;
-  border-color: #005593 transparent transparent;
+  border-color: #00a5a1 transparent transparent;
   right: 5px;
   left: auto;
   margin-top: -3px; }
@@ -3876,7 +3876,7 @@ select {
   content: '';
   border-left-width: 0;
   border-right-style: solid;
-  border-color: transparent #005593 transparent transparent; }
+  border-color: transparent #00a5a1 transparent transparent; }
 
 .dropdown.menu.vertical > li.opens-right > a::after {
   display: block;
@@ -3886,7 +3886,7 @@ select {
   content: '';
   border-right-width: 0;
   border-left-style: solid;
-  border-color: transparent transparent transparent #005593; }
+  border-color: transparent transparent transparent #00a5a1; }
 
 @media print, screen and (min-width: 40em) {
   .dropdown.menu.medium-horizontal > li.opens-left > .is-dropdown-submenu {
@@ -3908,7 +3908,7 @@ select {
     content: '';
     border-bottom-width: 0;
     border-top-style: solid;
-    border-color: #005593 transparent transparent;
+    border-color: #00a5a1 transparent transparent;
     right: 5px;
     left: auto;
     margin-top: -3px; }
@@ -3933,7 +3933,7 @@ select {
     content: '';
     border-left-width: 0;
     border-right-style: solid;
-    border-color: transparent #005593 transparent transparent; }
+    border-color: transparent #00a5a1 transparent transparent; }
   .dropdown.menu.medium-vertical > li.opens-right > a::after {
     display: block;
     width: 0;
@@ -3942,7 +3942,7 @@ select {
     content: '';
     border-right-width: 0;
     border-left-style: solid;
-    border-color: transparent transparent transparent #005593; } }
+    border-color: transparent transparent transparent #00a5a1; } }
 
 @media print, screen and (min-width: 64em) {
   .dropdown.menu.large-horizontal > li.opens-left > .is-dropdown-submenu {
@@ -3964,7 +3964,7 @@ select {
     content: '';
     border-bottom-width: 0;
     border-top-style: solid;
-    border-color: #005593 transparent transparent;
+    border-color: #00a5a1 transparent transparent;
     right: 5px;
     left: auto;
     margin-top: -3px; }
@@ -3989,7 +3989,7 @@ select {
     content: '';
     border-left-width: 0;
     border-right-style: solid;
-    border-color: transparent #005593 transparent transparent; }
+    border-color: transparent #00a5a1 transparent transparent; }
   .dropdown.menu.large-vertical > li.opens-right > a::after {
     display: block;
     width: 0;
@@ -3998,7 +3998,7 @@ select {
     content: '';
     border-right-width: 0;
     border-left-style: solid;
-    border-color: transparent transparent transparent #005593; } }
+    border-color: transparent transparent transparent #00a5a1; } }
 
 .dropdown.menu.align-right .is-dropdown-submenu.first-sub {
   top: 100%;
@@ -4051,7 +4051,7 @@ select {
     content: '';
     border-left-width: 0;
     border-right-style: solid;
-    border-color: transparent #005593 transparent transparent; }
+    border-color: transparent #00a5a1 transparent transparent; }
   .is-dropdown-submenu .is-dropdown-submenu-parent.opens-right > a::after {
     display: block;
     width: 0;
@@ -4060,7 +4060,7 @@ select {
     content: '';
     border-right-width: 0;
     border-left-style: solid;
-    border-color: transparent transparent transparent #005593; }
+    border-color: transparent transparent transparent #00a5a1; }
   .is-dropdown-submenu .is-dropdown-submenu {
     margin-top: -1px; }
   .is-dropdown-submenu > li {
@@ -6402,7 +6402,7 @@ ol.list-upper-roman {
   background-size: cover; }
 
 .section-feature-guide {
-  background-image: url(../img/hero/section-guide-large.jpg); }
+  background-image: url(../img/banners/section-guide-large.jpg); }
 
 @media screen and (min-width: 40em) {
   .section-cta-inline {
@@ -6541,13 +6541,33 @@ ol.list-upper-roman {
 .hero.hero-secondary {
   height: 250px; }
 
+.hero-title {
+  position: relative;
+  margin: 0;
+  font-size: 1.75rem;
+  line-height: 1.25;
+  z-index: 2; }
+
+.hero .content {
+  position: absolute;
+  bottom: 0;
+  padding-bottom: 30px; }
+
 @media screen and (min-width: 30em) {
   .hero {
     height: 300px; } }
 
 @media screen and (min-width: 48em) {
   .hero {
-    height: 480px; } }
+    height: 480px; }
+    .hero .content {
+      padding-bottom: 80px; }
+  .hero-title {
+    font-size: 2.5rem; } }
+
+@media screen and (min-width: 60em) {
+  .hero-title {
+    font-size: 3rem; } }
 
 @media screen and (min-width: 75em) {
   .hero {
@@ -6556,32 +6576,6 @@ ol.list-upper-roman {
 @media screen and (min-width: 87.5em) {
   .hero {
     background-size: cover; } }
-
-.hero .content {
-  position: absolute;
-  bottom: 0;
-  padding-bottom: 60px; }
-
-.hero-title-wrap {
-  position: relative;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  padding-right: 40px; }
-
-.hero-title {
-  position: relative;
-  margin: 0;
-  font-size: 1.75rem;
-  line-height: 1.25;
-  z-index: 2; }
-
-@media screen and (min-width: 48em) {
-  .hero-title {
-    font-size: 2.5rem; } }
-
-@media screen and (min-width: 60em) {
-  .hero-title {
-    font-size: 3rem; } }
 
 .button {
   margin: 0;
@@ -6862,7 +6856,7 @@ blockquote cite {
   background-color: #e6e6e6; }
 
 .carousel-cell {
-  width: 33%;
+  width: 100%;
   height: 100%;
   margin-right: 1px;
   text-align: center; }
@@ -6878,3 +6872,11 @@ blockquote cite {
   max-height: 100%;
   top: 50%;
   transform: translateY(-50%); }
+
+@media screen and (min-width: 40em) {
+  .carousel-cell {
+    width: 50%; } }
+
+@media screen and (min-width: 60em) {
+  .carousel-cell {
+    width: 33.3333%; } }
