--- a/scss/sc-src/_base.scss
+++ b/scss/sc-src/_base.scss
@@ -17,8 +17,8 @@
 .content-cta {
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 40px;
-	max-width: 40em;
+  margin-bottom: 1.25rem;
+	max-width: 50em;
 
 	.button {
 		margin-top: 1rem;
@@ -93,7 +93,7 @@
     margin-bottom: 0;
   }
 
-  p {
+  span {
     font-weight: $font-weight-bold;
   }
 }
@@ -172,6 +172,10 @@
   -webkit-column-gap: 2rem;
   -moz-column-gap: 2rem;
   column-gap: 2rem;
+  border-top: 1px solid $color-white;
+  border-bottom: 1px solid $color-white;
+  margin-top: 1rem;
+  padding-top: 1rem;
 
   li {
     -webkit-column-break-inside: avoid; /* Chrome, Safari, Opera */
@@ -196,9 +200,9 @@
   border-top: 1px solid $light-gray;
 
   span {
-    font-weight: bold;
+    font-weight: $font-weight-bold;
   }
-  
+
 }
 
 @media screen and (min-width: $breakpoint-sm) {
