--- a/scss/sc-src/_banner.scss
+++ b/scss/sc-src/_banner.scss
@@ -53,14 +53,30 @@
 
 @media screen and (min-width: $breakpoint-xs) {
   .hero {
-    height: $hero-image-md;
+    //height: $hero-image-sm;
+    background-size: cover;
   }
+}
+
+@media screen and (min-width: $breakpoint-sm) {
+  .hero {
+    height: $hero-image-sm;
+
+    .content {
+      padding-bottom: 70px;
+    }
+  }
+
+  .hero-title {
+    font-size: 2rem;
+  }
+
 }
 
 @media screen and (min-width: $breakpoint-md) {
 
   .hero {
-		height: $hero-image-lg;
+		height: $hero-image-md;
 
 		.content {
 			padding-bottom: 80px;
@@ -75,6 +91,10 @@
 
 @media screen and (min-width: $breakpoint-lg) {
 
+  .hero {
+    height: $hero-image-lg;
+  }
+
 	.hero-title {
 		font-size: 3rem;
 	}
@@ -82,6 +102,7 @@
 }
 
 @media screen and (min-width: $breakpoint-xxl) {
+
   .hero {
     height: $hero-image-xl;
   }
