--- a/scss/sc-src/_base.scss
+++ b/scss/sc-src/_base.scss
@@ -37,7 +37,7 @@
 
   .content-overlay {
     padding: 2rem 3rem;
-    background-color: rgba($black, 0.35); 
+    background-color: rgba($black, 0.4); 
   }
 }
 
@@ -113,9 +113,11 @@
   dt {
     flex-basis: 50%;
     padding-right: 0.5rem;
+    margin-bottom: 0;
   }
   dd {
     flex-basis: 50%;
+    margin-bottom: 0;
   }
 }
 
