Adjust Tabs/Accordion Breakpoints
Increased breakpoint for more tabs and added option to close all accordions

--- a/scss/sc-src/_tabs.scss
+++ b/scss/sc-src/_tabs.scss
@@ -51,7 +51,7 @@
 	margin-bottom: 1.25rem;
 }
 
-@media screen and (min-width: $breakpoint-sm) {
+@media screen and (min-width: $breakpoint-xl) {
 
 	.page-tabs {
 		position: relative;
@@ -65,7 +65,7 @@
 
 }
 
-@media screen and (min-width: $breakpoint-md) {
+@media screen and (min-width: $breakpoint-xl) {
 
 	.tabs-title {
 		a {
